frontend/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: monospace;
}

.bg {
    width: 100%;
    height: 100%;
    /* background-image: url('./assets/bg2.jpg'); */
    background-color: rgb(255, 255, 255);
    background-blend-mode: difference;
    background-size: 5px;
    background-repeat: repeat;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    opacity: .6;
    z-index: -1;
}

.main {
    position: relative;
    height: 70vh;
    /* display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 5rem 5rem 20vh 20vh 20vh; */
    /* align-items: center; */
}

.title {
    text-align: center;
    font-size: 3rem;
    letter-spacing: 2.2px;
    background-color: rgb(38, 38, 38);
    color: #ffffff;
    padding: 2rem 0;
}

.subtitle {
    margin-bottom: 1.5rem;
    font-size: 1.3rem;
}

.block {
    /* margin-bottom: 2rem; */
    border: 1px solid red;
}

.add {
    padding: 2rem;
    margin-bottom: 1rem;
}

.add > div {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: .5rem;
}

    .add__title {
        font-size: 1.4rem;
        display: block;
        margin-bottom: .3rem;
        font-weight: 600;
    }

    .add__input {
        padding: .2rem .6rem;
        min-height: 2rem;
        min-width: min(300px, 100%);
        border-radius: 4px;
        border-width: 1px;
        border: 1px solid #c4c4c4;
    }

    .add__button {
        height: 2.4rem;
        width: 2.4rem;
        text-align: center;
        font-size: 1rem;
        border: 1px solid transparent;
        border-radius: 4px;
        cursor: pointer;
        background-repeat: no-repeat;
        background-color: transparent;
        background-size: 80%;
        background-position: center;
        background-image: url('./assets/add.svg');
    }

.added {
    padding: 0 2rem;
}

.added__list {
    list-style: none;
    max-height: 150px;
    overflow-y: auto;
}

    .added__element {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: .4rem 1rem;
        border: 1px solid #c4c4c4;
        background-color: #ffffff;
        border-radius: 4px;
        margin-bottom: .3rem;
        font-size: 1.1rem;
    }

    .added__remove {
        width: 2rem;
        height: 2rem;
        background-color: transparent;
        border-color: transparent;
        font-size: 1.2rem;
        cursor: pointer;
    }


.do {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    right: 0;
    bottom: 0;
    padding: 2rem;
}

.view__button,
.do__button {
     padding: .4rem 1rem;
     font-size: 1.2rem;
     background-color: transparent;
     color: #ffffff;
     border-color: transparent;
     border-radius: 4px;
     cursor: pointer;
     width: 5rem;
     height: 5rem;
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: center;
     transition-duration: .25s;
     position: relative;
 }

    .do__button--general {
        background-image: url('./assets/mp4.svg');
    }

    .do__button--audio {
        background-image: url('./assets/mp3.svg');
    }

    .do__button:disabled {
        opacity: .4;
        pointer-events: none;
    }

    .view__button:hover,
    .do__button:hover {
        transform: translateY(-3px);
    }

    .view__button {
        background-image: url('./assets/folders.svg');
        background-color: transparent;
        margin-left: 1rem;
    }

    .do__button .badge {
        position: absolute;
        left: 0;
        top: 0;
        color: rgb(38, 38, 38);
        border: 1px solid rgb(38, 38, 38);
        padding: .2rem;
        border-radius: 50%;
        aspect-ratio: 1/1;
        display: flex;
        justify-content: center;
        align-items: center;
        transform: translate(-50%, -50%);
        font-size: .8rem;
        min-width: 1rem;
        min-height: 1.5rem;
        opacity: 1;
        transition-duration: .25s;   
    }

        .do__button .badge.badge--empty {
            opacity: 0;   
        }

    .download__icon {
        position: absolute;
        left: 0;
        bottom: 0;
        width: 1.6rem;
        height: 1.6rem;
        background-position: center;
        background-size: 80%;
        background-image: url('./assets/dl.svg');
        border: 1px solid #c4c4c4;
        background-color: #ffffff;
        background-repeat: no-repeat;
        border-radius: 4px;
        pointer-events: none;
    }



.floater {
    height: 30vh;
}

    .console {
        background-color: #000000;
        color: #ffffff;
        padding: 2rem 1rem;
        height: 100%;
        width: 100%;
        overflow-y: auto;
    }

    .code {
        color: #00ff08;
    }

.version {
    position: fixed;
    z-index: 10;
    right: 1rem;
    bottom: 1rem;
    font-size: 1rem;
    color: #00ff08;
}

 /* Errors */
 .error__text {
     color: #cd2d2d;
 }

